<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    tools:context=".ActPrincipal"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/lyAddParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">>

            <TextView
                android:id="@+id/txtTitleAddMember"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/adicionar_participante"
                android:textColor="#313131"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/lyPlanBtn2"
                android:layout_width="330dp"
                android:layout_height="84dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/digite_o_nome"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <ImageButton
                    android:id="@+id/btnAdd"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:onClick="updateParticipants"
                    app:srcCompat="@drawable/ic_baseline_add_box_24"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvParticpants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="#00FFFFFF" />


            <TextView
                android:id="@+id/txtTitleAddTask"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/adicionar_tarefa"
                android:textColor="#313131"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/lyAddTask"
                android:layout_width="330dp"
                android:layout_height="84dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/edtTask"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/digite_a_tarefa"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <ImageButton
                    android:id="@+id/btnAddTask"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:onClick="updateTasks"
                    app:srcCompat="@drawable/ic_baseline_add_box_24"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updateRandom"
                android:text="@string/sortear"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/resultado_do_sorteio"
                android:textColor="#313131"
                android:textSize="18sp"
                android:visibility="invisible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRandom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>